testdata/golden/sema/invalid/module_hidden_cross_file/first.fmt
pragma module;

@hidden
fn secret() -> int {
    return 1;
}

pub fn reveal() -> int {
    return secret();
}
